# pixmo-docs-debug

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  convert.py  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  selected_personas.txt  test_pipelines.py
pipeline/: all_pipelines.py
pipeline/asymptote_graphic_pipeline/: generate_graphic.py
pipeline/dalle_image_pipeline/: dalle_helper.py  generate_image.py
pipeline/docx_document_pipeline/: generate_document.py
pipeline/graphviz_diagram_pipeline/: generate_diagram.py
pipeline/html_chart_pipeline/: generate_chart.py
pipeline/html_document_pipeline/: generate_document.py
pipeline/html_document_point_pipeline/: generate_document.py  generate_point.py
pipeline/html_screen_pipeline/: generate_screen.py
pipeline/html_table_pipeline/: generate_table.py
pipeline/latex_chart_pipeline/: generate_chart.py
pipeline/latex_circuit_pipeline/: generate_circuit.py
pipeline/latex_diagram_pipeline/: generate_diagram.py  generate_qa.py  pipeline.py
pipeline/latex_document_pipeline/: generate_document.py
pipeline/latex_math_pipeline/: generate_math.py
pipeline/latex_table_pipeline/: generate_table.py
pipeline/lilypond_music_pipeline/: generate_music.py
pipeline/matplotlib_chart_pipeline/: generate_chart.py
pipeline/matplotlib_table_pipeline/: generate_table.py
pipeline/mermaid_diagram_pipeline/: generate_diagram.py  pipeline.py
pipeline/plotly_chart_pipeline/: generate_chart.py  generate_qa.py  pipeline.py
pipeline/plotly_table_pipeline/: generate_table.py
pipeline/prompts/: chart_prompts.py  diagram_prompts.py
pipeline/rdkit_chemical_pipeline/: generate_chemical.py
pipeline/schemdraw_circuit_pipeline/: generate_circuit.py
pipeline/svg_graphic_pipeline/: generate_graphic.py
pipeline/utils/: azure_llm.py  datadreamer_patches.py  plotly_export_utils.py  proxy_llm_fixed.py  proxy_llm_simple.py  render.py  utils.py
pipeline/vegalite_chart_pipeline/: generate_chart.py
